--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
         <nav class="right-navbar navbar-expand-lg">
           <div class="container-fluid">
             <div class="contact">
-              <div class="image_profile">
+              <div class="image_contatto_cliccato">
                 <a><img  :src="`./img/avatar${contacts[index].avatar}.png`" alt=""></a>
               </div>
+              <div class="name">
                 <span class="contatto_cliccato">{{contacts[index].name}}</span>
+              </div>
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a href="#"><i class="fas fa-video"></i></a>
